--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+          <img class="logo" src="./img/main_logo.png">
         </div>
         <div class="header-right">
           <a href="#" class="login">Log in</a>
@@ -39,28 +39,28 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
+              <img src="./img/html.png">
               <p>HTML & CSS</p>
             </div>
             <p class="txt-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+              <img src="./img/jQuery.png">
               <p>jQuery</p>
             </div>
             <p class="txt-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+              <img src="./img/ruby.png">
               <p>Ruby</p>
             </div>
             <p class="txt-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used to build web applications.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
+              <img src="./img/php.png">
               <p>PHP</p>
             </div>
             <p class="txt-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
@@ -79,7 +79,7 @@
     </div>
     <footer>
       <div class="container">
-        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
+        <img src="./img/footer_logo.png">
         <p>Learn to code, learn to be creative.</p>
       </div>
     </footer>
